--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#1DB474">
+    android:color="#80FFC9">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimary" />
-            <corners android:radius="10dp" />
+            <corners android:radius="13dp" />
         </shape>
     </item>
 </ripple>
