--- a/app/src/main/res/drawable/button_white.xml
+++ b/app/src/main/res/drawable/button_white.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#FAFAFA">
+    android:color="@color/gray3">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <corners android:radius="10dp" />
+            <corners android:radius="12dp" />
         </shape>
     </item>
 </ripple>
