--- a/app/src/main/res/drawable/text_state_selector.xml
+++ b/app/src/main/res/drawable/text_state_selector.xml
@@ -3,5 +3,5 @@
     <item android:color="@color/colorPrimary" android:state_enabled="true" />
     <item android:color="@color/white" android:state_enabled="false" />
     <!-- default state-->
-    <item android:color="@color/white"/>
+    <item android:drawable="@drawable/button_green" />
 </selector>
