--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -11,7 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -282,10 +281,10 @@
                         android:id="@+id/btn_see_all_history_trx_dashboard"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_width="wrap_content"
-                        android:layout_height="26dp"
+                        android:layout_height="36dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/button_grey_accent"
+
                         android:elevation="0dp"
                         android:fontFamily="@font/ibm_plex_sans_medium"
                         android:gravity="center_horizontal|center_vertical"
@@ -316,12 +315,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/btn_see_all_history_trx_dashboard"
-                        tools:listitem="@layout/item_trans_history" />
+                        tools:listitem="@layout/item_trans_history"
+                        tools:itemCount="5" />
 
                     <TextView
                         android:id="@+id/tv_no_trans_history_dashboard"
@@ -333,7 +333,7 @@
                         android:layout_marginBottom="16dp"
                         android:text="@string/no_transaction_history"
                         android:textColor="@color/darkO05"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -402,7 +402,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/btn_see_all_info_dashboard"
-                        tools:listitem="@layout/item_trans_history" />
+                        tools:listitem="@layout/item_trans_history"
+                        tools:itemCount="5" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
