--- a/app/src/main/res/layout/fragment_personal_data.xml
+++ b/app/src/main/res/layout/fragment_personal_data.xml
@@ -38,32 +38,53 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_reg_form_gender"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                app:errorEnabled="true"
+                android:layout_weight="1"
+                android:text="@string/gender"
+                android:textColor="@color/dark"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_full_name">
+                app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_full_name" />
 
-                <com.google.android.material.textfield.TextInputEditText
+            <RadioGroup
+                android:id="@+id/rad_reg_form_gender"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView22">
+
+                <RadioButton
+                    android:id="@+id/rad_male_fr_personal_data"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:hint="@string/gender"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:background="@color/lightest_neutral" />
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="@string/male"
+                    android:textSize="15sp" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <RadioButton
+                    android:id="@+id/rad_female_fr_personal_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="@string/female"
+                    android:textSize="15sp" />
+            </RadioGroup>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_reg_form_status"
+                android:id="@+id/edit_reg_form_married_status"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -73,14 +94,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_gender">
+                app:layout_constraintTop_toBottomOf="@+id/rad_reg_form_gender">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/marriage_status"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
 
@@ -97,7 +118,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_status">
+                app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_married_status">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -127,7 +148,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/date_of_birth"
-                    android:inputType="text"
+                    android:inputType="date|text"
                     android:paddingStart="0dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
@@ -136,6 +157,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_religion"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -147,12 +169,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_birth_date">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/religion"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
 
@@ -160,6 +182,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_education"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -171,12 +194,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_religion">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/last_education"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
 
@@ -198,11 +221,11 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
+                    android:background="@color/lightest_neutral"
                     android:hint="@string/home_phone_number"
-                    android:inputType="text"
+                    android:inputType="text|number"
                     android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:background="@color/lightest_neutral"/>
+                    android:paddingEnd="0dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -211,7 +234,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/next"
                 android:textColor="@android:color/transparent"
