--- a/app/src/main/res/layout/fragment_work_info.xml
+++ b/app/src/main/res/layout/fragment_work_info.xml
@@ -16,6 +16,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_occupation"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -27,12 +28,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/occupation"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
 
@@ -40,6 +41,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_field"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -51,12 +53,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_occupation">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/field"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral" />
 
@@ -64,6 +66,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_salary"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -75,12 +78,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_reg_form_field">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:hint="@string/monthly_salary"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
+                    android:inputType="none"
+                    android:paddingStart="8dp"
                     android:paddingEnd="0dp"
                     android:background="@color/lightest_neutral"/>
 
@@ -140,6 +143,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_reg_form_experience"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -151,14 +155,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rv_radio">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
+                    android:background="@color/lightest_neutral"
                     android:hint="@string/work_experience"
-                    android:inputType="text"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:background="@color/lightest_neutral"/>
+                    android:inputType="none"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="0dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
